# barriernet

./: LICENSE  README.md  pyproject.toml  requirements.txt
barriernet/: cli.py  core.py  genesets.py  io.py  spatial.py
barriernet/data/: geneset_ihc.yaml  geneset_rna.yaml
example/: demo_bulk.tsv  run_demo.sh
